--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,20 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "bcryptjs": "^3.0.2",
     "chart.js": "^4.4.9",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
+    "exceljs": "^4.4.0",
+    "express": "^5.1.0",
     "file-saver": "^2.0.5",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "mongoose": "^8.15.1",
     "ng2-charts": "^4.1.1",
+    "nodemailer": "^7.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
